test/spec_vectors/type-subtyping/fail/module_74.wat
(module (type $a (sub (struct (field (ref any))))) (type $b (sub $a (struct (field (mut (ref any)))))))